--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,23 +10,20 @@ jobs:
     runs-on: ubuntu-latest
     name: Build and Push
     steps:
-      - name: Checkout code
+      - name: git-checkout
         uses: actions/checkout@v3
 
-      - name: Install dependencies
+      - name: Install all dependencies
         run: npm install
 
-      - name: Build project
-        run: npm run build # Ensure this creates the `build` directory
+      - name: Build
+        run: npm run build # The build command of your project
 
-      - name: List build directory
-        run: ls -al build # Debug step to confirm directory contents
-
-      - name: Push to build branch
-        uses: s0/git-publish-subdir-action@v1.3.0
+      - name: Push
+        uses: s0/git-publish-subdir-action@develop
         env:
           REPO: self
-          BRANCH: build
-          FOLDER: build
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          MESSAGE: "Build: ({sha}) {msg}"
+          BRANCH: build # The branch name where you want to push the assets
+          FOLDER: build # The directory where your assets are generated
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub will automatically add this - you don't need to bother getting a token
+          MESSAGE: "Build: ({sha}) {msg}" # The commit message
